# WeChatAI

./: .editorconfig  .env  .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc.cjs  Cargo.toml  LICENSE  README-CN.md  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.cjs  tsconfig.json  version-bump.mjs  vite.config.ts  vite.config.ts.timestamp-1682429445749-b819476e25cdb.mjs
.github/workflows/: cr.yml  lint-and-build.yml  release.yml
crates/chatgpt_rs/examples/: example_conversation.json
crates/chatgpt_rs/src/: client.rs  config.rs  err.rs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  LICENSE  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  cmd.rs  error.rs  main.rs
src-tauri/src/config/: app.rs
src-tauri/src/core/: handle.rs  mod.rs  sysopt.rs  window_manager.rs
src-tauri/src/server/: extractor.rs  mod.rs
src-tauri/src/server/helper/: chatgpt.rs  image.rs
src-tauri/src/server/http/: mod.rs
src-tauri/src/server/router/: chatgpt.rs  image.rs  mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/ui/: mod.rs  tray.rs
src/assets/css/: font-awesome.min.css  github-markdown.css  index.css  setting-box.less
src/components/AutoBlockMenu/: index.vue
src/components/Avatar/: index.vue
src/components/EditableContent/: index.vue
src/components/SvgIcon/: index.vue
src/components/Textarea/: index.vue
src/config/: app.json  chat.json  prompt.json
src/hooks/: useLocalStorage.ts  useLocale.ts  useTheme.ts
src/locales/: en-US.ts  index.ts  zh-CN.ts
src/plugins/: index.ts  style.ts
src/router/: index.ts
src/store/: app.ts  chat.ts  index.ts  prompt.ts
src/types/: app.d.ts  env.d.ts
src/utils/format/: index.ts
src/utils/is/: index.ts
src/utils/markdown/: index.ts
src/utils/misc/: index.ts
(+25 files in other folders)
